2014-07-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Shutdown.x3dv: 

2014-07-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Border.wrl: 

2014-07-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Border.wrl: 

2014-07-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-20  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-19  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-19  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-18  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2014-07-17  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-17  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Geometry3D.wrl: 

2014-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* OutlineEditor.wrl: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Inline.wrl: 

2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Transform-URI.x3dv: 

2014-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-13  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-13  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2014-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* TwoSidedMaterial.wrl: 

2014-07-10  Holger Seelig  <holger.seelig@yahoo.de>

	* TwoSidedMaterial.wrl: 

2014-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateGenerator.wrl: 

2014-06-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* pb.x3dv:
	* QuadSphere.x3dv: 
