@@ -1,3 +1,10 @@
+2014-07-25  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DBaseNode.h:
+	* X3DBaseNode.cpp:
+	* X3DChildObject.h:
+	* ChildObjectSet.h: 
+
 2014-07-24  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DInput.h:
