@@ -1,3 +1,8 @@
+2014-07-25  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Cube.wrl:
+	* Shutdown.x3dv: 
+
 2014-07-24  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
